# cnn

./: .gitignore  CMakeLists.txt  README.md  tags
buildc/examples/: rnnlm2
cnn/: CMakeLists.txt  aligned-mem-pool.h  cnn.cc  cnn.h  conv.cc  conv.h  cuda.cc  cuda.h  data-util.cc  data-util.h  dict.h  dnn.h  expr-xtra.cc  expr-xtra.h  expr.cc  expr.h  functors.h  gpu-kernels.cu  gpu-kernels.h  gpu-ops.cu  gpu-ops.h  grad-check.cc  gru.h  init.cc  init.h  macros.h  math.cc  math.h  metric-util.cc  metric-util.h  model.cc  model.h  nodes-common.cc  nodes.cc  nodes.h  param-nodes.cc  param-nodes.h  rnn.h  rnnem.cc  rnnem.h  (+5 more)
examples/: CMakeLists.txt  attentional.cc  attentional.h  rnnlm2.cc
exp/lm/: rnnlm2chinese.bat
ext/acoustics/: acoustic_model.h  asr.h
ext/dialogue/: CMakeLists.txt  attention_with_intention.h  attention_with_intention.h.bk  cxtencdec.h  dialogue.h  dialogue_process.h  global_variable.h  global_variables.cc
ext/lda/: lda.cc  lda.h
ext/ngram/: ngram.h
ext/trainer/: eval_proc.h  train_proc.cc  train_proc.h  train_proc_wrapper.h
